--- a/assets/styles.css
+++ b/assets/styles.css
@@ -440,23 +440,23 @@ section > * + * {
 }
 
 /* Schedule */
+button[aria-expanded="false"] + div {
+  display: none;
+}
 .schedule {
   padding: var(--spacing) 0;
 }
-.date-tabs {
-  margin-bottom: 2rem;
-}
-.date-tabs [role=tab] {
-  padding: 0.5rem 1.5rem;
+.schedule-date {
   background-color: transparent;
-  border: 5px solid var(--color-pink);
+  border: none;
   color: var(--color-white);
-  margin: 0 0.5rem 0.25rem;
-  font-weight: 600;
-  font-size: 18px;
+  display: block;
+  border-bottom: 2px solid var(--color-yellow);
+  text-align: left;
+  width: 80%;
 }
-.date-tabs [role=tab][aria-selected=true] {
-  background-color: var(--color-pink);
+.schedule-date .section-title {
+  margin-bottom: 1rem;
 }
 
 .date-agenda {
@@ -466,10 +466,11 @@ section > * + * {
 
 .date-agenda-item {
   display: grid;
-  grid-template-columns: clamp(6.50rem, calc(6.07rem + 2.14vw), 9.00rem) clamp(1.50rem, calc(0.86rem + 3.21vw), 3.75rem) auto;
+  grid-template-columns: clamp(7.50rem, calc(7.07rem + 2.14vw), 9.00rem) clamp(1.50rem, calc(0.86rem + 3.21vw), 3.75rem) auto;
   border-bottom: 1px solid var(--color-light-blue);
   padding: 1rem 0.25rem;
   list-style-type: none;
+  align-items: baseline;
 }
 
 .date-agenda-item .time {
@@ -482,11 +483,11 @@ section > * + * {
   font-family: var(--title-font);
 }
 .date-agenda-item .description {
-  font-size: 1.175rem;
+  font-size: 2rem;
   display: flex;
   flex-direction: column;
 }
 .date-agenda-item .description .location {
-  font-size: 0.85rem;
+  font-size: 1rem;
   color: #b7b6b6;
 }
