--- a/assets/styles.css
+++ b/assets/styles.css
@@ -255,7 +255,7 @@ section > * + * {
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 2rem 0;
+  padding-top: 2rem;
   padding-bottom: 10rem;
 }
 
@@ -329,7 +329,7 @@ section > * + * {
 }
 
 .about-section {
-  padding: 3rem 0;
+  padding: 3rem var(--spacing);
 }
 
 .about-section .section-title{
@@ -440,23 +440,42 @@ section > * + * {
 }
 
 /* Schedule */
+button[aria-expanded="false"] + div {
+  display: none;
+}
 .schedule {
   padding: var(--spacing) 0;
 }
-.date-tabs {
-  margin-bottom: 2rem;
-}
-.date-tabs [role=tab] {
-  padding: 0.5rem 1.5rem;
+.schedule-date {
   background-color: transparent;
-  border: 5px solid var(--color-pink);
+  border: none;
   color: var(--color-white);
-  margin: 0 0.5rem 0.25rem;
-  font-weight: 600;
-  font-size: 18px;
+  display: block;
+  border-bottom: 2px solid var(--color-yellow);
+  text-align: left;
+  width: max(80%, 280px);
+  cursor: pointer;
 }
-.date-tabs [role=tab][aria-selected=true] {
-  background-color: var(--color-pink);
+.schedule-date .section-title {
+  margin-bottom: 1rem;
+}
+.schedule-date span {
+  display: inline-block;
+  line-height: 1;
+  text-align: center;
+  text-indent: 0;
+  transform: rotate(0deg);
+}
+.schedule-date[aria-expanded=false] span {
+  transform: rotate(270deg);
+}
+
+.schedule-date  svg {
+  width: 0.9em;
+  height: 0.9em;
+  fill: #fff;
+  transition: transform 0.25s ease-in;
+  transform-origin: center 45%;
 }
 
 .date-agenda {
@@ -465,11 +484,17 @@ section > * + * {
 }
 
 .date-agenda-item {
-  display: grid;
-  grid-template-columns: clamp(6.50rem, calc(6.07rem + 2.14vw), 9.00rem) clamp(1.50rem, calc(0.86rem + 3.21vw), 3.75rem) auto;
+  grid-template-columns: clamp(7.50rem, calc(7.07rem + 2.14vw), 9.00rem) clamp(1.50rem, calc(0.86rem + 3.21vw), 3.75rem) auto;
   border-bottom: 1px solid var(--color-light-blue);
   padding: 1rem 0.25rem;
   list-style-type: none;
+  align-items: baseline;
+}
+
+@media (min-width: 768px) {
+  .date-agenda-item {
+    display: grid;
+  }
 }
 
 .date-agenda-item .time {
@@ -482,11 +507,11 @@ section > * + * {
   font-family: var(--title-font);
 }
 .date-agenda-item .description {
-  font-size: 1.175rem;
+  font-size: clamp(1.25rem, 0.9891rem + 1.3043vw, 2rem);
   display: flex;
   flex-direction: column;
 }
 .date-agenda-item .description .location {
-  font-size: 0.85rem;
+  font-size: clamp(0.875rem, 0.8315rem + 0.2174vw, 1rem);
   color: #b7b6b6;
 }
