Updates workshop information

--- a/workshop.njk
+++ b/workshop.njk
@@ -4,45 +4,28 @@ title: Workshop
 class: star-bg
 ---
 <div class="workshop">
-  <h2 class="section-title">Python and Microcontroller Workshops</h2>
-  <p>
-    There will be 2 Python based workshops at SHD India 2019. To attend please book a 
-    single ticket and Register here.
-  </p>
-  <h4>Suitable For</h4>
-  <p>Beginner coders, Pre-university Science, Bsc and Engineering students and 
-    Physics and Electronics Teachers OR anyone with curios mind and passion to learn new things.
-  </p>
-
   <div class="workshop-subgroup">
-    <h3>Workshop I - Python 101</h3>
+    <h2 class="section-title">Science Toys & Demos</h2>
     <p>
-    Python Programming for Beginners - Hands-on workshop
-    <br/><br/>
-    Come learn the basics of Python, one of the best coding languages for beginner coders. This workshop is perfect for those who have little to no programming experience, or those who just want to learn Python!
-    </p>
-    <h4>Suitable For</h4>
-    <p>Beginner coders, Pre-university Science, Bsc and Engineering students and Teachers</p>
-    <h4>Duration</h4>
-    <p>2 hours 30 minutes (Resource persons will be available for interactions and help for two days)
+      Kids built different science toys and demos.
     </p>
   </div>
-
   <div class="workshop-subgroup">
-    <h3>Workshop II - KuttyPy - Connect to the outside world using Python </h3>
+    <h2 class="section-title">Soldering & Electronics</h2>
     <p>
-    Hands-on workshop - Microcontroller training for beginners
-    <br/><br/>
-    Computer programmers and hobbyists at times come across situations where they need to switch a light bulb, rotate a motor or measure a temperature under software control. Generally these things are done by connecting some extra hardware to the computer and coding it in C language. KuttyPy is a USB interfaced board that gives you an option to do those things in pure Python.
-    <br/><br/>
-    Each participant of this workshop will be given KuttyPy Kit to take home</p>
-    <h4>Suitable For</h4>
-    <p>This Hands on workshop is mainly targated at Bsc and Engineering students and
-      also Physics and Electronics Teachers.</p>
-    <h4>Duration</h4>
-    <p>2 hours 30 minutes (Resource persons will be available for interactions and help for two days)</p>
-    <br/>
-    <p>Participants will also get a chance to try some hands on experiments with ExpEYES -python powered open source pocket science lab. It is a hardware & software framework for developing science experiments, demonstrations and projects without getting in to the details of electronics or computer programming. It converts your PC into a science laboratory.
+      People built an intruder alert system using soldering and electronics.
+    </p>
+  </div>
+  <div class="workshop-subgroup">
+    <h2 class="section-title"> Arduino & Kuttypy</h2>
+    <p>
+      Kids were taught basics of programming using LEDs, breadboards, Arduino Nano and KuttyPy.
+    </p>
+  </div>
+  <div class="workshop-subgroup">
+    <h2 class="section-title">World of Microbes</h2>
+    <p>
+      The world of microbes was demonstrated using microscopes.
     </p>
   </div>
 </div>
