Fixes padding in section-dark

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -248,7 +248,9 @@ section > * + * {
   margin: auto;
 }
 .section-dark {
-  padding: max(calc((100vw - 1440px) / 2 + var(--spacing)), var(--spacing));
+  padding: var(--spacing);
+  padding-left: max(calc((100vw - 1440px) / 2 + var(--spacing)), var(--spacing));
+  padding-right: max(calc((100vw - 1440px) / 2 + var(--spacing)), var(--spacing));
   background: rgb(53,35,65);
   background: radial-gradient(circle, rgba(53,35,65,1) 0%, rgba(6,2,1,1) 100%);
 }
