--- a/projects.njk
+++ b/projects.njk
@@ -2,14 +2,14 @@
 layout: page.njk
 title: Projects
 ---
-<div class="projects">
+<ul class="projects">
   {% for item in projects %}
-  <div class="project-item">
+  <li class="project-item">
     <h2 class="section-title">{{ item.title }}</h2>
     <p>
       {{ item.description }}
-    </p>
-    <p>Team: <a href="{{ item.contact }}">{{ item.creator }}</a></p>
-  </div>
+    </p><br />
+    <p>Team: <a {% if item.contact %}href="{{ item.contact }}"{% endif %}>{{ item.creator }}</a></p>
+  </li>
   {% endfor %}
-</div>
+</ul>
