--- a/workshop.njk
+++ b/workshop.njk
@@ -13,13 +13,13 @@ class: star-bg
   <div class="workshop-subgroup">
     <h2 class="section-title">Soldering & Electronics</h2>
     <p>
-      People built an intruder alert system using soldering and electronics.
+      People built an <a href="/writeups/soldering">intruder alert system</a> using soldering and electronics.
     </p>
   </div>
   <div class="workshop-subgroup">
     <h2 class="section-title"> Arduino & Kuttypy</h2>
     <p>
-      Kids were taught basics of programming using LEDs, breadboards, Arduino Nano and KuttyPy.
+      Kids were taught basics of programming using LEDs, breadboards, <a href="https://kuttypy.readthedocs.io/en/latest/workshopnano/" target="_blank">Arduino Nano and KuttyPy.</a>
     </p>
   </div>
   <div class="workshop-subgroup">
