--- a/index.njk
+++ b/index.njk
@@ -14,7 +14,7 @@ class: star-bg
   </p>
   <div class="hero-cta">
     <a class="primary-btn" target="_blank" href="https://konfhub.com/shdindia" rel="noopener noreferrer">
-      Buy Tickets
+      Buy Tickets [N/A]
     </a>
   </div>
 </div>
