--- a/writeups/soldering.njk
+++ b/writeups/soldering.njk
@@ -11,10 +11,23 @@ class: star-bg
 <section class="about-section">
   <h2 class="section-title">What is this?</h2>
 
-    <img class="ui image fluid" alt="" src="/assets/images/schematic.png">
+    <img class="ui image fluid" style="width:100%;background:#edd9;border-radius:13px;padding:5px;" alt="" src="/assets/images/schematic.png">
     
 
 
 </section>
-    make responsive.
+
+
+<section class="about-section">
+  <h2 class="section-title">Bill of Materials</h2>
+    
+<ul>
+<li>Dog Barking Module</li>
+<li>Battery (3V)</li>
+<li>Battery Holder</li>
+<li>Microwave radar</li>
+<li>Speaker</li>
+</ul>
+
+</section>
 
