Adds url filter to paths

--- a/_includes/base.njk
+++ b/_includes/base.njk
@@ -23,8 +23,8 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500;700;900&family=Roboto+Mono:wght@400;500&display=swap" rel="stylesheet">
 
-  <link rel="stylesheet" href="/assets/styles.css" />
-  <link rel="icon" href="/assets/images/favicon.ico">
+  <link rel="stylesheet" href="{{ "/assets/styles.css" | url }}" />
+  <link rel="icon" href="{{ "/assets/images/favicon.ico" | url }}">
 </head>
 <body class={{ class }}>
   {% include "header.njk" %}
